# scripts.shanghairanking

./: README.md  abc-ranking-with-labels.csv  abc-ranking.csv  arwu2024.csv  bcur202510.csv  bcur202610.csv  main.py  main1.py  pyproject.toml  requirements.txt
